--- a/Cadres/app/src/main/res/layout/activity_gb.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb.xml
@@ -182,22 +182,17 @@
         tools:text="实际配备实际配备备实际备备实际配备："
         android:layout_height="wrap_content"/>
 
-    <HorizontalScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/dp_15"
-        android:layout_marginEnd="@dimen/dp_15"
-        android:overScrollMode="never"
-        android:scrollbars="none"
-        app:layout_goneMarginTop="@dimen/dp_20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/view_bottom"
-        app:layout_constraintTop_toBottomOf="@+id/view_top">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="0dp"
+            android:layout_marginStart="@dimen/dp_15"
+            app:layout_goneMarginTop="@dimen/dp_20"
+            android:layout_marginEnd="@dimen/dp_15"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/view_bottom"
+            app:layout_constraintTop_toBottomOf="@+id/view_top"
+            android:layout_height="0dp">
 
             <View
                 android:id="@+id/view_title"
@@ -287,23 +282,12 @@
                 android:text="性别"/>
 
             <TextView
-                android:id="@+id/tv_nation"
-                android:layout_width="@dimen/dp_90"
+                android:id="@+id/tv_place"
+                android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_sex"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="民族"/>
-
-            <TextView
-                android:id="@+id/tv_place"
-                android:layout_width="@dimen/dp_90"
-                android:layout_height="0dp"
-                android:textSize="14sp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_nation"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:text="籍贯"/>
@@ -320,37 +304,28 @@
                 android:text="出生年月"/>
 
             <TextView
-                android:id="@+id/tv_rdsj"
-                android:layout_width="@dimen/dp_90"
+                android:id="@+id/tv_qrzwhcd"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_csny"
+                app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="入党时间"/>
-
-            <TextView
-                android:id="@+id/tv_qrzwhcd"
-                android:layout_width="@dimen/dp_120"
-                android:layout_height="0dp"
-                android:textSize="14sp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="全日制文化程度"/>
+                android:text="全日制\n文化程度"/>
 
             <TextView
                 android:id="@+id/tv_zzwhcd"
-                android:layout_width="@dimen/dp_120"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
+                app:layout_constraintEnd_toEndOf="@+id/view_title"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="在职文化程度"/>
+                android:text="在职\n文化程度"/>
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -368,8 +343,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </HorizontalScrollView>
 
     <View
         android:id="@+id/view_bottom"
@@ -408,17 +381,6 @@
         android:text="单位目录"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/iv_menu"/>
-
-    <TextView
-        android:id="@+id/tv_all"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/view_menu"
-        app:layout_constraintBottom_toBottomOf="@+id/view_menu"
-        android:layout_marginStart="@dimen/dp_15"
-        android:text="展示全部"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/view_menu"/>
 
     <EditText
         android:id="@+id/et_search"
