--- a/Cadres/app/src/main/res/layout/activity_search.xml
+++ b/Cadres/app/src/main/res/layout/activity_search.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/shape_ffe5ce_r40"
         android:drawableLeft="@mipmap/ic_search"
         android:drawablePadding="@dimen/dp_15"
-        android:hint="请输入干部姓名、单位名称进行搜索"
+        android:hint="请输入关键字进行搜索"
         android:imeOptions="actionSearch"
         android:inputType="text"
         android:maxLength="20"
