--- a/Cadres/app/src/main/res/layout/item_gb.xml
+++ b/Cadres/app/src/main/res/layout/item_gb.xml
@@ -34,12 +34,34 @@
         app:layout_constraintBottom_toBottomOf="@+id/iv_head"
         android:src="@mipmap/ic_punishment_yellow"
         android:layout_marginTop="@dimen/dp_8"
-        android:layout_marginBottom="@dimen/dp_8"
+        android:layout_marginBottom="@dimen/dp_12"
         android:scaleType="fitCenter"
         android:visibility="gone"
         tools:visibility="visible"
         android:layout_marginStart="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/iv_head"/>
+
+    <TextView
+        android:id="@+id/tv_head_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="affafd"
+        android:textColor="@color/color_bd1b21"
+        android:background="@color/color_ffe5ce"
+        android:paddingStart="@dimen/dp_15"
+        android:visibility="gone"
+        android:textSize="@dimen/sp_14"
+        tools:visibility="visible"
+        android:paddingEnd="@dimen/dp_15"
+        android:layout_marginTop="@dimen/dp_5"
+        app:layout_constraintStart_toStartOf="@+id/iv_head_tag"
+        app:layout_constraintTop_toBottomOf="@+id/iv_head_tag"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_5"
+        app:layout_constraintStart_toStartOf="@+id/tv_head_tag"
+        app:layout_constraintTop_toBottomOf="@+id/tv_head_tag"/>
 
     <TextView
         android:id="@+id/tv_name"
@@ -108,23 +130,12 @@
         tools:text="性别"/>
 
     <TextView
-        android:id="@+id/tv_nation"
-        android:layout_width="@dimen/dp_90"
+        android:id="@+id/tv_place"
+        android:layout_width="@dimen/dp_60"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_sex"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="民族"/>
-
-    <TextView
-        android:id="@+id/tv_place"
-        android:layout_width="@dimen/dp_90"
-        android:layout_height="0dp"
-        android:textSize="14sp"
-        android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_nation"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="籍贯"/>
@@ -141,34 +152,25 @@
         tools:text="出生年月"/>
 
     <TextView
-        android:id="@+id/tv_rdsj"
-        android:layout_width="@dimen/dp_90"
+        android:id="@+id/tv_qrzwhcd"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="入党时间"/>
-
-    <TextView
-        android:id="@+id/tv_qrzwhcd"
-        android:layout_width="@dimen/dp_120"
-        android:layout_height="0dp"
-        android:textSize="14sp"
-        android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
+        app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="全日制文化程度"/>
 
     <TextView
         android:id="@+id/tv_zzwhcd"
-        android:layout_width="@dimen/dp_120"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="在职文化程度"/>
