--- a/Cadres/app/src/main/res/layout/activity_search.xml
+++ b/Cadres/app/src/main/res/layout/activity_search.xml
@@ -62,6 +62,14 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="@dimen/dp_30" />
 
+            <androidx.constraintlayout.widget.Group
+                android:id="@+id/group_history"
+                android:layout_width="wrap_content"
+                app:constraint_referenced_ids="tv_history_title,fl_history"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_height="wrap_content"/>
+
             <TextView
                 android:id="@+id/tv_history_title"
                 android:layout_width="wrap_content"
